# syscall-numbers

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  gen.sh
src/: aarch64.rs  arm.rs  lib.rs  m68k.rs  microblaze.rs  mips.rs  mips64.rs  mipsn32.rs  or1k.rs  powerpc.rs  powerpc64.rs  riscv64.rs  s390x.rs  sh.rs  x32.rs  x86.rs  x86_64.rs
