# https://rust-lang.github.io/api-guidelines/checklist.html

[package]
name          = "syscall-numbers"
description   = "System calls numbers for various architectures"
version       = "3.1.1"                                             # Remember to update `html_root_url`.
authors       = ["Koutheir Attouchi <koutheir@gmail.com>"]
homepage      = "https://codeberg.org/koutheir/syscall-numbers.git"
repository    = "https://codeberg.org/koutheir/syscall-numbers.git"
documentation = "https://docs.rs/syscall-numbers"
readme        = "README.md"
license       = "MIT"
edition       = "2021"
categories    = ["external-ffi-bindings", "os", "os::linux-apis"]
keywords      = ["ffi", "api", "linux", "syscall", "kernel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
